add method for set & get recent search, integerate search product api, update layout

--- a/src/app/pages/product/product-list/product-list.component.html
+++ b/src/app/pages/product/product-list/product-list.component.html
@@ -1,27 +1,23 @@
 <ion-header class="ion-no-border">
   <ion-toolbar *ngIf="search">
+    <ion-buttons mode="md" class="ion-text-center">
+      <ion-back-button defaultHref="/product/search" icon="chevron-back-outline"> </ion-back-button>
+      <ion-title class="header-title center-with-back">{{ 'SEARCH_RESULT' | translate }}</ion-title>
+    </ion-buttons>
+  </ion-toolbar>
+  <ion-toolbar *ngIf="search">
     <div (click)="searchProduct()" class="ion-padding-start">
       <ion-searchbar class="custom-search" mode="ios" disabled [value]="search"></ion-searchbar>
     </div>
-    <ion-buttons slot="end">
-      <ion-button>
-        <ion-icon name="funnel" slot="start" class="header-action-size"></ion-icon>
-        <ion-text class="header-action-size"> {{ 'SORT' | translate }} </ion-text>
-      </ion-button>
-    </ion-buttons>
   </ion-toolbar>
   <ion-toolbar *ngIf="!search">
     <ion-buttons slot="start" mode="md">
       <ion-back-button defaultHref="/tabs/home"> </ion-back-button>
-      <ion-title class="header-title">{{ title }}</ion-title>
+      <ion-title class="header-title center-with-back">{{ title }}</ion-title>
     </ion-buttons>
     <ion-buttons slot="end">
       <ion-button (click)="searchProduct()">
         <ion-icon name="search" class="header-action-size"></ion-icon>
-      </ion-button>
-      <ion-button>
-        <ion-icon name="funnel" slot="start" class="header-action-size"></ion-icon>
-        <ion-text class="header-action-size"> Sort by </ion-text>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
