--- a/src/global.scss
+++ b/src/global.scss
@@ -252,6 +252,10 @@ ion-searchbar {
   text-transform: capitalize;
 }
 
+.header-title.center-with-back {
+  padding-right: 50px;
+}
+
 .ion-no-margin-bottom {
   margin-bottom: 0;
 }
