--- a/src/global.scss
+++ b/src/global.scss
@@ -139,6 +139,14 @@
   border-radius: 0.5em;
 }
 
+.modal-filter-product .modal-wrapper {
+  height: 30%;
+  width: 80%;
+  position: absolute;
+  display: block;
+  border-radius: 0.5em;
+}
+
 .font-md {
   font-size: 13px;
 }
@@ -174,6 +182,10 @@ ion-searchbar.custom-search {
 
 .ion-no-padding-bottom {
   padding-bottom: 0;
+}
+
+.ion-no-padding-end {
+  padding-right: 0;
 }
 
 ion-slide.full-width {
