--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -26,7 +26,7 @@
 
   --ion-color-success: #99cc33;
   --ion-color-success-rgb: 153, 204, 51;
-  --ion-color-success-contrast: #000000;
+  --ion-color-primary-contrast: #ffffff;
   --ion-color-success-contrast-rgb: 0, 0, 0;
   --ion-color-success-shade: #87b42d;
   --ion-color-success-tint: #a3d147;
