--- a/src/app/shared/common/cards/card-product/card-product.component.html
+++ b/src/app/shared/common/cards/card-product/card-product.component.html
@@ -10,7 +10,7 @@
         <ion-text class="product-name">{{ product?.name }} </ion-text>
       </ion-col>
       <ion-col size="2" class="ion-text-right">
-        <ion-icon name="list" (click)="addToFavorite()"></ion-icon>
+        <ion-icon name="list" (click)="addToFavorite(product?.product_id)"></ion-icon>
       </ion-col>
 
       <ion-col size="12">
