implement sort filter modal product to product list & bundling detail

--- a/src/global.scss
+++ b/src/global.scss
@@ -147,6 +147,14 @@
   border-radius: 0.5em;
 }
 
+.modal-sort-product .modal-wrapper {
+  height: 45%;
+  width: 80%;
+  position: absolute;
+  display: block;
+  border-radius: 0.5em;
+}
+
 .font-md {
   font-size: 13px;
 }
