--- a/src/app/pages/bundling/bundling-detail/bundling-detail.component.html
+++ b/src/app/pages/bundling/bundling-detail/bundling-detail.component.html
@@ -46,3 +46,23 @@
     <ion-infinite-scroll-content loadingSpinner="bubbles"> </ion-infinite-scroll-content>
   </ion-infinite-scroll>
 </ion-content>
+
+<ion-footer>
+  <ion-row class="padding-footer">
+    <ion-col size="5.5" class="ion-text-center">
+      <ion-text color="success" (click)="showSort()">
+        <ion-icon name="funnel"></ion-icon>
+        {{ 'SORT' | translate }}
+      </ion-text>
+    </ion-col>
+    <ion-col size="1" class="ion-text-center">
+      <ion-text color="success" class="divider"> </ion-text>
+    </ion-col>
+    <ion-col size="5.5" class="ion-text-center">
+      <ion-text color="success" (click)="showFilter()">
+        <ion-icon name="funnel"></ion-icon>
+        {{ 'FILTER' | translate }}
+      </ion-text>
+    </ion-col>
+  </ion-row>
+</ion-footer>
