--- a/src/app/pages/product/product-list/product-list.component.html
+++ b/src/app/pages/product/product-list/product-list.component.html
@@ -40,3 +40,23 @@
     </ion-row>
   </ion-grid>
 </ion-content>
+
+<ion-footer>
+  <ion-row class="padding-footer">
+    <ion-col size="5.5" class="ion-text-center">
+      <ion-text color="success" (click)="showSort()">
+        <ion-icon name="funnel"></ion-icon>
+        {{ 'SORT' | translate }}
+      </ion-text>
+    </ion-col>
+    <ion-col size="1" class="ion-text-center">
+      <ion-text color="success" class="divider"> </ion-text>
+    </ion-col>
+    <ion-col size="5.5" class="ion-text-center">
+      <ion-text color="success" (click)="showFilter()">
+        <ion-icon name="funnel"></ion-icon>
+        {{ 'FILTER' | translate }}
+      </ion-text>
+    </ion-col>
+  </ion-row>
+</ion-footer>
