--- a/src/app/pages/product/product-list/product-list.component.scss
+++ b/src/app/pages/product/product-list/product-list.component.scss
@@ -12,3 +12,13 @@
   font-size: 12px !important;
   text-transform: capitalize;
 }
+
+.padding-footer {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.divider {
+  border: 0.5px solid var(--ion-color-success);
+  width: 1px;
+}
