integrate api related product & brand

--- a/src/app/pages/product/product-search/product-search.component.html
+++ b/src/app/pages/product/product-search/product-search.component.html
@@ -12,6 +12,7 @@
         mode="ios"
         (ionChange)="searchProduct($event)"
         debounce="1000"
+        value="{{ keyword }}"
       ></ion-searchbar>
     </div>
     <ion-buttons slot="end">
