Adjust home styling, install font family Metropolis

--- a/src/app/shared/common/cards/card-article/card-article.component.html
+++ b/src/app/shared/common/cards/card-article/card-article.component.html
@@ -15,8 +15,8 @@
           to wash strawberries
         </ion-text>
       </ion-col>
-      <ion-col size="12" class="ion-text-right">
-        <ion-text class="article-readmore">{{ 'READ_MORE' | translate }}</ion-text>
+      <ion-col size="12" class="ion-text-right" style="min-height: 22px;">
+        <ion-text class="section-see-all">{{ 'READ_MORE' | translate }}</ion-text>
       </ion-col>
     </ion-row>
   </ion-card-content>
