--- a/src/app/pages/home/home-bundling/home-bundling.component.html
+++ b/src/app/pages/home/home-bundling/home-bundling.component.html
@@ -7,7 +7,7 @@
       {{ 'SEE_ALL' | translate }}
     </ion-text>
   </ion-col>
-  <ion-col size="12" class="ion-padding-top">
+  <ion-col size="12">
     <ion-text class="section-desc">{{ 'FRESH_GROCERIES_DESC' | translate }}</ion-text>
   </ion-col>
 </ion-row>
