--- a/src/app/pages/home/home-categories/home-categories.component.html
+++ b/src/app/pages/home/home-categories/home-categories.component.html
@@ -1,3 +1,8 @@
+<ion-row>
+  <ion-col>
+    <ion-text class="section-title">{{ 'CATEGORIES' | translate }}</ion-text>
+  </ion-col>
+</ion-row>
 <ion-row class="ion-no-padding">
   <ion-col class="ion-no-padding" size="3" *ngFor="let item of categories">
     <app-card-category [category]="item"></app-card-category>
