--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -8,12 +8,18 @@ img {
 }
 
 .location-title {
-  font-size: 13px;
+  font-size: 11px;
+  line-height: 1.2;
+  letter-spacing: normal;
+  color: #353535;
 }
 
 .location-text {
-  font-weight: bold;
-  font-size: 12px;
+  font-size: 11px;
+  font-weight: 600;
+  line-height: 1.2;
+  letter-spacing: normal;
+  color: #99cc33;
 }
 
 .notif-icon {
