--- a/src/app/shared/common/cards/card-product/card-product.component.html
+++ b/src/app/shared/common/cards/card-product/card-product.component.html
@@ -7,20 +7,25 @@
   <ion-card-content class="ion-no-padding ion-text-left">
     <ion-row>
       <ion-col size="10" class="truncate">
-        <ion-text class="product-name">{{ product?.name }} </ion-text>
+        <p class="product-price" *ngIf="product?.secondary_price" [ngClass]="{ 'price-linethrough': product?.secondary_price }">
+          Rp {{ product?.secondary_price | number: '1.0-0':'id' }}
+        </p>
       </ion-col>
       <ion-col size="2" class="ion-text-right">
         <ion-icon name="list" (click)="addToFavorite(product?.product_id)"></ion-icon>
       </ion-col>
-
+    </ion-row>
+    <ion-row>
       <ion-col size="12">
-        <p class="product-size">{{ product?.weight }}gr/pcs</p>
-        <p class="product-price" [ngClass]="{ 'price-linethrough': product?.secondary_price }">
-          Rp {{ product?.primary_price | number: '1.0-0':'id' }}
+        <p class="product-final-price">
+          Rp {{ product?.primary_price | number: '1.0-0':'id' }} <span> /pcs</span>
         </p>
-        <p class="product-final-price" *ngIf="product?.secondary_price">
-          Rp {{ product?.secondary_price | number: '1.0-0':'id' }} <span> /pcs</span>
-        </p>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-text class="product-name">{{ product?.name | titlecase }} </ion-text>
+        <p class="product-size">Size: {{ product?.weight }} gr</p>
       </ion-col>
     </ion-row>
   </ion-card-content>
