--- a/src/app/shared/common/cards/card-product/card-product.component.scss
+++ b/src/app/shared/common/cards/card-product/card-product.component.scss
@@ -1,21 +1,38 @@
+.product {
+  
+  &-size {
+    font-size: 8px;
+    font-weight: normal;
+    line-height: 3.33;
+    color: #454545;
+    width: 95px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  &-final-price {
+    font-size: 12px;
+    font-weight: 600;
+    line-height: 1.3;
+    color: #99cc33;
+    width: 95px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
+
 .product-img {
   width: 200px;
   height: 80px;
-  object-fit: fill;
+  object-fit: contain;
 }
 
 .product-name {
-  font-size: 12px;
-  font-weight: bold;
-}
-
-.product-size {
-  font-size: 8px;
-  color: lightgray;
-  width: 95px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  font-size: 10px;
+  font-weight: 600;
+  line-height: 2.5;
+  color: #454545;
 }
 
 .product-price {
@@ -34,8 +51,4 @@
 .product-final-price {
   font-size: 10px;
   font-weight: bold;
-  width: 95px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
