Adjust product design, add discount calculate

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -30,7 +30,7 @@
         </div>
       </ion-col>
       <ion-col size="1.3" class="ion-no-padding ion-align-self-center ion-text-center">
-        <ion-icon name="notifications" color="primary" class="notif-icon"></ion-icon>
+        <ion-icon name="notifications" color="primary" class="notif-icon" [routerLink]="['/tabs/notification/list']"></ion-icon>
       </ion-col>
       <ion-col size="1.3" class="ion-no-padding ion-align-self-center ion-text-center">
         <ion-icon name="mail" color="primary" class="notif-icon"></ion-icon>
