--- a/src/app/shared/common/cards/card-product/card-product.component.scss
+++ b/src/app/shared/common/cards/card-product/card-product.component.scss
@@ -1,9 +1,23 @@
 .product {
-  
+  &-brand {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 2.17;
+    letter-spacing: normal;
+    color: #707070;
+    text-transform: capitalize;
+  }
+  &-name {
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1.07;
+    letter-spacing: normal;
+    color: #454545;
+  }
   &-size {
-    font-size: 8px;
+    font-size: 10px;
     font-weight: normal;
-    line-height: 3.33;
+    line-height: 1.5;
     color: #454545;
     width: 95px;
     white-space: nowrap;
@@ -11,7 +25,7 @@
     text-overflow: ellipsis;
   }
   &-final-price {
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 600;
     line-height: 1.3;
     color: #99cc33;
@@ -28,27 +42,18 @@
   object-fit: contain;
 }
 
-.product-name {
-  font-size: 10px;
-  font-weight: 600;
-  line-height: 2.5;
-  color: #454545;
-}
-
 .product-price {
   font-size: 10px;
   width: 95px;
+  font-weight: 600;
+  line-height: 3.4;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  height: 10px;
+  vertical-align: super;
+  color: #f8a345;
 }
 
 .price-linethrough {
   text-decoration: line-through;
-}
-
-.product-final-price {
-  font-size: 10px;
-  font-weight: bold;
 }
