integrate api upload profile picture

--- a/src/app/pages/profile/edit-profile/edit-profile.page.html
+++ b/src/app/pages/profile/edit-profile/edit-profile.page.html
@@ -14,7 +14,7 @@
         <form [formGroup]="fg" *ngIf="fg">
           <ion-row class="ion-padding ion-align-items-center bg-white">
             <ion-col size="2" class="ion-no-padding">
-              <img width="80%" class="rounded" [src]="selectedImage" />
+              <img width="80%" class="rounded profile-img" [src]="selectedImage" />
             </ion-col>
             <ion-col size="7">
               <ion-row>
