Apply styling to authentication flow

--- a/src/app/pages/change-password/set-password/set-password.component.html
+++ b/src/app/pages/change-password/set-password/set-password.component.html
@@ -1,7 +1,7 @@
 <ion-header class="ion-no-border">
-  <ion-toolbar>
+  <ion-toolbar mode="ios">
     <ion-buttons slot="start" mode="md">
-      <ion-back-button defaultHref="/login/form"></ion-back-button>
+      <ion-back-button icon="chevron-back" defaultHref="/login/form"></ion-back-button>
       <ion-title>{{ 'NEW_PASSWORD' | translate }}</ion-title>
     </ion-buttons>
   </ion-toolbar>
