--- a/src/app/pages/favorite/favorite-list/favorite-list.component.html
+++ b/src/app/pages/favorite/favorite-list/favorite-list.component.html
@@ -1,5 +1,5 @@
 <ion-header [translucent]="true" class="ion-no-border">
-  <ion-toolbar>
+  <ion-toolbar mode="ios">
     <ion-title> {{ 'FAVORITES' | translate }} </ion-title>
     <ion-text slot="end" class="add-favorite" (click)="addToList()">
       <ion-icon name="add-outline"></ion-icon>
