--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-header [translucent]="true" class="ion-no-border">
-  <ion-toolbar>
+  <ion-toolbar mode="ios">
     <ion-row>
       <ion-col size="4" size-md="3" class="ion-no-padding-bottom ion-padding-horizontal ion-padding-top">
         <img src="assets/images/app-logo.svg" />
