--- a/src/app/pages/notification/notification-detail/notification-detail.component.html
+++ b/src/app/pages/notification/notification-detail/notification-detail.component.html
@@ -1,7 +1,7 @@
 <ion-header class="ion-no-border">
-  <ion-toolbar>
+  <ion-toolbar mode="ios">
     <ion-buttons slot="start" mode="md" class="title">
-      <ion-back-button defaultHref="/tabs/notification"></ion-back-button>
+      <ion-back-button icon="chevron-back" defaultHref="/tabs/notification"></ion-back-button>
       <ion-title class="title">{{ notification?.title }}</ion-title>
     </ion-buttons>
   </ion-toolbar>
