--- a/src/app/pages/notification/notification-list/notification-list.component.html
+++ b/src/app/pages/notification/notification-list/notification-list.component.html
@@ -1,5 +1,5 @@
 <ion-header [translucent]="true" class="ion-no-border">
-  <ion-toolbar>
+  <ion-toolbar mode="ios">
     <ion-title> {{ 'NOTIFICATION' | translate }} </ion-title>
   </ion-toolbar>
 </ion-header>
