--- a/src/app/pages/brand/brand-list/brand-list.component.html
+++ b/src/app/pages/brand/brand-list/brand-list.component.html
@@ -1,7 +1,7 @@
 <ion-header class="ion-no-border">
-  <ion-toolbar>
+  <ion-toolbar mode="ios">
     <ion-buttons mode="md">
-      <ion-back-button defaultHref="/tabs/home" icon="chevron-back-outline"> </ion-back-button>
+      <ion-back-button icon="chevron-back" defaultHref="/tabs/home" icon="chevron-back-outline"> </ion-back-button>
       <ion-title class="header-title">{{ title }}</ion-title>
     </ion-buttons>
   </ion-toolbar>
