--- a/src/app/pages/bundling/bundling-detail/bundling-detail.component.html
+++ b/src/app/pages/bundling/bundling-detail/bundling-detail.component.html
@@ -1,7 +1,7 @@
 <ion-header class="ion-no-border">
-  <ion-toolbar>
+  <ion-toolbar mode="ios">
     <ion-buttons mode="md" class="ion-text-center">
-      <ion-back-button defaultHref="/tabs/home" icon="chevron-back-outline"> </ion-back-button>
+      <ion-back-button icon="chevron-back" defaultHref="/tabs/home" icon="chevron-back-outline"> </ion-back-button>
       <ion-title class="header-title">{{ bundling?.name }}</ion-title>
     </ion-buttons>
     <ion-buttons slot="end">
