--- a/src/app/pages/change-password/request-otp/request-otp.component.html
+++ b/src/app/pages/change-password/request-otp/request-otp.component.html
@@ -1,9 +1,9 @@
 <ion-header class="ion-no-border">
-  <ion-toolbar>
+  <ion-toolbar mode="ios">
     <ion-buttons slot="start" mode="md">
-      <ion-back-button defaultHref="/login/form"></ion-back-button>
-      <ion-title>{{ headerText }}</ion-title>
+      <ion-back-button icon="chevron-back" defaultHref="/login/form"></ion-back-button>
     </ion-buttons>
+    <ion-title>{{ headerText }}</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
@@ -18,19 +18,18 @@
     <ion-row>
       <ion-col size="12" class="ion-no-padding">
         <form (ngSubmit)="sendOtp()" #requestOTPForm="ngForm">
-          <ion-item lines="none">
+          <ion-item class="form-group" lines="none">
             <ion-input class="default-theme" required placeholder="{{ 'YOUR_EMAIL_ADDRESS' | translate }}"></ion-input>
           </ion-item>
         </form>
       </ion-col>
     </ion-row>
+    <ion-row class="ion-padding-bottom">
+      <ion-col size="12" class="ion-padding ion-text-center">
+        <ion-button fill="outline" color="primary" (click)="requestOTPForm.ngSubmit.emit()">
+          <b>{{ 'GET_OTP' | translate | uppercase }}</b>
+        </ion-button>
+      </ion-col>
+    </ion-row>
   </ion-grid>
 </ion-content>
-
-<ion-footer class="ion-no-border">
-  <ion-row class="ion-padding-bottom">
-    <ion-col class="ion-padding">
-      <ion-button expand="full" (click)="requestOTPForm.ngSubmit.emit()"> {{ 'GET_OTP' | translate }}</ion-button>
-    </ion-col>
-  </ion-row>
-</ion-footer>
