--- a/src/app/pages/favorite/favorite-detail/favorite-detail.component.html
+++ b/src/app/pages/favorite/favorite-detail/favorite-detail.component.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true" class="ion-no-border">
-  <ion-toolbar>
+  <ion-toolbar mode="ios">
     <ion-buttons slot="start" mode="md">
-      <ion-back-button defaultHref="/tabs/favorite"></ion-back-button>
+      <ion-back-button icon="chevron-back" defaultHref="/tabs/favorite"></ion-back-button>
       <ion-title> {{ favorite?.name }} </ion-title>
     </ion-buttons>
   </ion-toolbar>
