--- a/src/app/pages/login/login-form/login-form.component.scss
+++ b/src/app/pages/login/login-form/login-form.component.scss
@@ -6,15 +6,8 @@
   padding-top: 10px;
 }
 
-.login-redirect-text {
+::-webkit-input-placeholder {
+  padding-left: 0 !important;
+  color: #707070;
   font-size: 12px;
-  font-weight: bold;
-  &:focus {
-    outline: 0;
-  }
-  .link {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
 }
