--- a/src/app/shared/common/modal-pin-location/modal-pin-location.component.html
+++ b/src/app/shared/common/modal-pin-location/modal-pin-location.component.html
@@ -1,5 +1,5 @@
 <ion-header class="ion-no-border" [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar mode="ios">
     <ion-button (click)="dismiss()" slot="end" fill="clear">
       <ion-icon slot="icon-only" name="close-outline" color="dark"></ion-icon>
     </ion-button>
@@ -15,7 +15,7 @@
 </ion-content>
 
 <ion-footer class="ion-no-border ion-padding-horizontal">
-  <ion-toolbar>
+  <ion-toolbar mode="ios">
     <ion-row>
       <ion-col size="12">
         <ion-card>
