--- a/src/app/shared/common/modals/modal-setting/modal-setting.component.html
+++ b/src/app/shared/common/modals/modal-setting/modal-setting.component.html
@@ -1,5 +1,5 @@
 <ion-header class="ion-no-border">
-  <ion-toolbar>
+  <ion-toolbar mode="ios">
     <ion-buttons mode="md" class="ion-text-center">
       <ion-icon (click)="dismiss()" name="chevron-back-outline" class="ion-padding-start" slot="start"> </ion-icon>
       <ion-title class="header-title center-with-back">{{ title }}</ion-title>
