Apply divider globally, add icon active inactive on tabs

--- a/src/app/pages/favorite/favorite-new/favorite-new.component.html
+++ b/src/app/pages/favorite/favorite-new/favorite-new.component.html
@@ -11,7 +11,7 @@
       </ion-row>
       <ion-row>
         <ion-col class="ion-padding-horizontal">
-          <ion-item class="ion-no-padding ion-no-margin">
+          <ion-item class="ion-no-padding ion-no-margin" mode="ios">
             <ion-label position="floating"> {{ 'LIST_NAME' | translate }}</ion-label>
             <ion-input formControlName="name"></ion-input>
           </ion-item>
