--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -22,7 +22,7 @@
         </ion-row>
       </ion-col>
     </ion-row>
-    <ion-row class="ion-padding-horizontal">
+    <ion-row>
       <ion-col size="9.4" (click)="searchProduct()">
         <ion-searchbar class="custom-search" mode="ios"></ion-searchbar>
         <div class="ion-no-padding ion-align-self-center ion-text-center scan-icon-container" (click)="scanQR();$event.stopPropagation();">
