--- a/src/app/pages/favorite/favorite-list/favorite-list.component.html
+++ b/src/app/pages/favorite/favorite-list/favorite-list.component.html
@@ -1,12 +1,6 @@
 <ion-header [translucent]="true" class="ion-no-border">
   <ion-toolbar mode="ios">
     <ion-title> {{ 'FAVORITES' | translate }} </ion-title>
-    <ion-text slot="end" class="add-favorite" (click)="addToList()">
-      <ion-icon name="add-outline"></ion-icon>
-      <ion-text>
-        {{ 'ADD_NEW_LIST' | translate }}
-      </ion-text>
-    </ion-text>
   </ion-toolbar>
 </ion-header>
 
@@ -18,8 +12,21 @@
         slot="end"
         class="ion-text-right text-see-list link"
         [routerLink]="['/favorite', item.favourite_group_id, 'detail']"
-        >{{ 'SEE_LIST' | translate }}</ion-text
+        ><b>{{ 'SEE_LIST' | translate }}</b></ion-text
       >
     </ion-item>
   </ion-list>
 </ion-content>
+
+<ion-footer class="ion-no-border">
+  <ion-row class="ion-padding-vertical">
+    <ion-col class="ion-text-center">
+      <ion-text class="add-favorite" (click)="addToList()">
+        <ion-icon name="add-outline" style="vertical-align: middle;"></ion-icon>
+        <ion-text>
+          {{ 'ADD_NEW_LIST' | translate }}
+        </ion-text>
+      </ion-text>
+    </ion-col>
+  </ion-row>
+</ion-footer>
