--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -1,7 +1,38 @@
 <ion-header class="ion-no-border">
-  <ion-toolbar mode="md">
+  <!-- <ion-toolbar mode="ios">
     <ion-title class="ion-padding-horizontal">{{'MY_PROFILE' | translate}}</ion-title>
-  </ion-toolbar>
+  </ion-toolbar> -->
+  <ion-row class="ion-padding ion-align-items-center bg-white">
+    <ion-col size="2">
+      <img
+        width="80%"
+        class="rounded profile-img"
+        src="https://via.placeholder.com/35.png?text=LOGO+Placeholder"
+        *ngIf="!userData?.profile_picture"
+      />
+      <img
+        width="80%"
+        class="rounded profile-img"
+        [src]="userData?.profile_picture"
+        *ngIf="userData?.profile_picture"
+      />
+    </ion-col>
+    <ion-col size="7">
+      <ion-row>
+        <ion-col size="12">
+          <ion-text color="dark"><b>{{userData?.full_name}}</b> </ion-text>
+        </ion-col>
+        <ion-col size="12" size="small"
+          ><ion-text color="medium"> <small>{{userData?.email}}</small> </ion-text></ion-col
+        >
+      </ion-row>
+    </ion-col>
+    <ion-col size="3">
+      <ion-button expand="block" fill="solid" shape="round" color="success" size="small" [routerLink]="['/qr']">
+        {{'VIEW_QR' | translate}}
+      </ion-button>
+    </ion-col>
+  </ion-row>
 </ion-header>
 
 <ion-content>
@@ -9,48 +40,16 @@
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
   <ion-grid class="ion-no-padding">
-    <ion-row class="ion-padding-horizontal ion-padding-bottom ion-align-items-center bg-white">
-      <ion-col size="2">
-        <img
-          width="80%"
-          class="rounded profile-img"
-          src="https://via.placeholder.com/35.png?text=LOGO+Placeholder"
-          *ngIf="!userData?.profile_picture"
-        />
-        <img
-          width="80%"
-          class="rounded profile-img"
-          [src]="userData?.profile_picture"
-          *ngIf="userData?.profile_picture"
-        />
-      </ion-col>
-      <ion-col size="7">
-        <ion-row>
-          <ion-col size="12">
-            <ion-text color="dark"><b>{{userData?.full_name}}</b> </ion-text>
-          </ion-col>
-          <ion-col size="12" size="small"
-            ><ion-text color="medium"> <small>{{userData?.email}}</small> </ion-text></ion-col
-          >
-        </ion-row>
-      </ion-col>
-      <ion-col size="3">
-        <ion-button expand="block" fill="solid" shape="round" color="success" size="small" [routerLink]="['/qr']">
-          {{'VIEW_QR' | translate}}
-        </ion-button>
-      </ion-col>
-    </ion-row>
-
     <ion-row class="ion-margin-bottom">
       <ion-col size="12">
         <ion-list>
           <ion-item *ngFor="let menu of menuList" (click)="onMenuClick(menu)">
-            <ion-label>{{menu?.title | titlecase}}</ion-label>
+            <ion-label class="profile-menu">{{menu?.title | titlecase}}</ion-label>
             <ng-container
               *ngIf="menu?.route || menu?.url || menu?.modal then chevronComp; else langComp"
             ></ng-container>
             <ng-template #chevronComp>
-              <ion-icon name="chevron-forward-outline" color="dark"></ion-icon>
+              <ion-icon style="font-size:18px" name="chevron-forward-outline" color="dark"></ion-icon>
             </ng-template>
             <ng-template #langComp>
               <ion-select
