--- a/src/global.scss
+++ b/src/global.scss
@@ -31,12 +31,20 @@
   font-family: 'Metropolis';
 }
 
+:host{
+  --background-focused:unset;
+}
+
 .h-100 {
   height: 100%;
 }
 
 .h-30 {
   height: 30%;
+}
+
+ion-header {
+  border-bottom: 8px solid #f5f5f5;
 }
 
 .form-group {
@@ -128,6 +136,12 @@ ion-title {
   font-weight: 600 !important;
 }
 
+ion-item {
+  ion-icon {
+    --detail-icon-font-size: 16px !important;
+  }
+}
+
 .modal-info .modal-wrapper {
   height: 32%;
   width: 80%;
@@ -189,7 +203,7 @@ ion-searchbar.custom-search {
   padding-right: 5px;
 
   .searchbar-input-container input {
-    padding-left: 15px !important;
+  padding-left: 30px !important;
     border: solid 0.5px #e5e5e5 !important;
     border-radius: 5px;
     background-color: white;
@@ -203,7 +217,6 @@ ion-searchbar.custom-search {
 
 ::-webkit-input-placeholder {
   /* Chrome/Opera/Safari */
-  padding-left: 16px;
   color: #707070;
   font-size: 12px;
   opacity: 1;
@@ -363,8 +376,8 @@ ion-searchbar {
 }
 
 .divider {
-  height: 10px;
-  background-color: #eeeeee;
+  height: 8px;
+  background-color: #f5f5f5;
 }
 
 .alert-wrapper {
